--- a/angularjs-project/assets/Css/card.css
+++ b/angularjs-project/assets/Css/card.css
@@ -17,8 +17,8 @@
 }
 
 .book-card {
-    width: 280px; /* Giới hạn chiều rộng */
-    height: auto; /* Tự động theo nội dung */
+    width: 230px; 
+    height: auto; 
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -27,18 +27,20 @@
 }
 
 .book-image {
-    width: 100%;
-    height: 70%;
+    width: 70%;
     padding: 10px;
     border-radius: 10px 10px 0 0;
 }
-
+.book-img_box{
+    width: 100%;
+    height: 70%;
+}
 .book-content {
     padding: 15px;
 }
 
 .book-title {
-    font-size: 1.2rem;
+    font-size: 0.9rem;
     font-weight: bold;
     color: #333;
 }
