--- a/angularjs-project/assets/Css/card.css
+++ b/angularjs-project/assets/Css/card.css
@@ -70,3 +70,58 @@
 .book-button:hover {
     background-color: #172554;
 }
+
+
+.modal-content {
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    padding: 15px;
+}
+
+.modal-header {
+    background-color: #007bff;
+    color: white;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.modal-title {
+    font-weight: bold;
+}
+
+.modal-body {
+    text-align: center;
+    padding: 20px;
+}
+
+.modal-body img {
+    width: 100%;
+    max-width: 250px;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.modal-body p {
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+.btn-primary {
+    background-color: #ffcc00;
+    border: none;
+    font-weight: bold;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.btn-primary:hover {
+    background-color: #ff9900;
+    color: white;
+}
