--- a/angularjs-project/app/Views/user/product/addProduct.html
+++ b/angularjs-project/app/Views/user/product/addProduct.html
@@ -52,8 +52,7 @@
         </div>
 
         <div class="col-md-12 text-center">
-            <button type="submit" class="btn btn-success px-4">Thêm Sách</button>
-            <button type="button" class="btn btn-secondary ms-2" ng-click="resetForm()">Làm mới</button>
+            <button type="submit" class="btn btn-success px-4" style="color: rgb(138, 0, 103);">Thêm Sách</button>
         </div>
     </form>
 </div>
