--- a/angularjs-project/app/Views/user/product/addProduct.html
+++ b/angularjs-project/app/Views/user/product/addProduct.html
@@ -38,13 +38,13 @@
             </select>
         </div>
 
-        <!-- <div class="col-md-12">
+        <div class="col-md-12">
             <label for="image" class="form-label fw-bold">Hình ảnh</label>
-            <input type="file" id="image" class="form-control" accept="image/*" ngf-select ng-model="book.imageFile" ng-change="previewImage()" required>
+            <input type="file" id="image" class="form-control" accept="image/*" file-input required>
             <div class="mt-2 text-center">
                 <img ng-src="{{book.imagePreview}}" class="img-thumbnail" ng-if="book.imagePreview" style="width: 150px; height: 200px;">
             </div>
-        </div> -->
+        </div>
 
         <div class="col-md-12">
             <label for="description" class="form-label fw-bold">Mô tả</label>
